# stitches

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  paper_experiment_scenarioMIP2.py  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/workflows/: deploy.yml  pre-commit.yml  workflow.yml
_modules/: index.html
_modules/stitches/: fx_match.html  fx_pangeo.html  fx_recipe.html  fx_stitch.html  install_pkgdata.html  make_matching_archive.html  make_pangeo_table.html  make_tas_archive.html
_sources/examples/: modify-inputs.rst.txt
_static/: copybutton.js
data/: README.md
examples/: modify-inputs.html
getting-started/: installation.html  quickstarter.html  stitches-quickstart.html  tutorial.html
modules/: 1A.get_tas.py  1B.matching_archive.py  1C.get_all_pangeo_table.py  2A.generate_recpie.py  3A.stitch_gridded.py  debugging_permutations.py  debugging_permute_stitching_recipes.py  debugging_remove_duplicates.py  full_pipeline.py  matching-investigation.py  non_tas_example.py  paper1_enrich_ensemble.py  paper_experiment_CMIP6.py  paper_experiment_miniCMIP.py  paper_experiment_scenarioMIP.py  paper_experiment_scenarioMIP2.py  paper_experiment_tolerance_sweep.py  run_paper_experiment_miniCMIP.sh  run_paper_experiment_scenarioMIP.sh  run_paper_experiment_scenarioMIP2.sh  run_tolerance_sweep.sh  tas_psl_stitching_paper1.py
notebooks/: GCAM_AnnualMeeting2023.ipynb  Get_Chunk_Info_2021-02-18.ipynb  Tutorial.Rmd  acs-dev-v1-cleanup.ipynb  checking-miroc-in-pangeo.ipynb  checking-mpiLR-in-pangeo.ipynb  create_archive_pasted_raw_tgav_anomalies.py  create_archive_raw_tgav.py  create_archive_smooth_tgav.py  create_pangeo_metadata_for_archive_filtering.ipynb  example-emulate_global_tas.ipynb  full_pipeline_example.ipynb  gridded_stitching.ipynb  gridded_stitching_regular-py.py  old_recipes.csv  old_tgavs.csv  preparing-input-data.ipynb  produce_nearest_neighboor_inputs.py  sample.ipynb  setting_up_netcdf_stitching.py  setting_up_netcdf_stitchingn.ipynb  smooth_ex.py  smoothing_investigation.py  smoothing_investigation_access.py  smoothing_investigation_canesm.py  smoothing_investigation_giss.py  smoothing_investigation_miroc.py  smoothing_investigation_mpiHR.py  smoothing_investigation_mpiLR.py  smoothing_investigation_norcpm.py  smoothing_investigation_ukesm.py  spelling-old-new-testing.ipynb  stitches-barebones-quickstart.ipynb  stitches-quickstart.ipynb  stitches_takehome_GCAMAnnualMeeting2023.ipynb  stitches_training_GCAMAnnualMeeting2023.ipynb  stitching_example.py  tgav_ex.py  tutorial_more_flexible_target_archive_windows.ipynb  tutorial_stitched_gridded.ipynb  (+1 more)
paper/: paper.bib  paper.md
reference/: api.html  contributing.html
stitches/: __init__.py  calculatetgav.py  dev_matchup.py  dopatternscaling.py  fx_data.py  fx_match.py  fx_pangeo.py  fx_processing.py  fx_recepie.py  fx_recipe.py  fx_stitch.py  fx_util.py  generate_package_data.py  gridstitch_fx.py  install_pkgdata.py  make_matching_archive.py  make_pangeo_table.py  make_tas_archive.py  netcdf_fx.py  package_data.py  pangeo_fx.py  pkgimports.py  readpangeo.py  sample.py  utils.py
tests/: conftest.py  make_test_data.py  make_testing_data.py  test-recipe_dat.csv  test_fx_recipe.py  test_install_data.py  test_match.py  test_pangeo.py  test_stitch.py  test_util.py
(+17348 files in other folders)
